Sample for Java 14 - Pattern Matching for instanceof (JEP 305)